# Criando-um-Pacote-de-Processamento-de-Imagens-com-Python

./: .pypirc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
image_processing/: _init_.py  filters.py  transformations.py
image_processing_package.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_filters.py  test_transformations.py
